# template_c_libs_modules

./: .gitignore  CMakeLists.txt  rascunho.txt
include/: test.h
include/modules/oi/: m_oi.h
libs/legal/: legal.c  legal.h
libs/mylib/: mylib.c  mylib.h
libs/mylib2/: mylib2.c  mylib2.h
src/: main.c  test.c
src/modules/oi/: m_oi.c
